Move terminal output outside of the frame so that it doesn't gets erased when reloading the frame

--- a/app/views/commands/_terminal.html.erb
+++ b/app/views/commands/_terminal.html.erb
@@ -11,6 +11,7 @@
         toggle_class_toggle_class: "terminal--open",
         action: "keydown->terminal#handleKeyPress keydown->navigable-list#navigate focusin->navigable-list#select keydown.esc->toggle-class#remove:stop keydown.esc->terminal#focus keydown.esc->navigable-list#selectLast keydown.esc@document->terminal#hideMenus" } do %>
   <%= turbo_frame_tag :recent_commands, src: commands_path, data: { terminal_target: "recentCommands" } %>
+  <div class="terminal--output" data-terminal-target="output"></div>
 
   <%= render "commands/form" %>
 <% end %>
