--- a/app/assets/stylesheets/popup.css
+++ b/app/assets/stylesheets/popup.css
@@ -153,7 +153,7 @@
     transform: scale(0.2) translateX(-50%);
     transform-origin: top left;
     transition: var(--dialog-duration) allow-discrete;
-    transition-property: display, opacity, overlay transform;
+    transition-property: display, opacity, overlay, transform;
 
     &::backdrop {
       background-color: var(--color-always-black);
